--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "        [0.4588]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -154,18 +154,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training model\n",
+    "Using loss functions in order to determine how far away our predictions are.\n",
+    "\n",
+    "The lower the output of your loss function, the better.\n",
+    "\n",
+    "Optimizer takes into account the loss of a model and adjusts the model's weights anad biases\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Loss function\n",
+    "loss_fn = nn.L1Loss()\n",
+    "\n",
+    "#Optimizer (stochastic gradient descent)\n",
+    "optimizer = torch.optim.SGD(params = model_0.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building a training and testing loop\n",
+    "\n",
+    "- Loop through the data and do all these steps:\n",
+    "- Forward pass (Moves data through the model using the forward function) to make predictions on data\n",
+    "- Calculate the loss (Compare forward pass predictions to ground truth labels)\n",
+    "- Optimizer zero grad\n",
+    "- Loss backward (Moves backwards through network in order to calculate the gradients of each parameter with respect to the loss) (**Back propogation**)\n",
+    "- Optimizer step uses the optimzer to adjust our model's parameters to try and find the lowest cost (**Gradient Descent**)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#An epoch is one loop through the data (It is a hyperparameter)\n",
+    "epochs = 10\n",
+    "\n",
+    "\n",
+    "#Training\n",
+    "#Loop through data\n",
+    "for epoch in range(epochs):\n",
+    "    #Set the model to training mode\n",
+    "    model_0.train() #train mode sets all paramters that require gradients to require gradients\n",
+    "    #Forward pass\n",
+    "    y_preds = model_0(X_train)\n",
+    "\n",
+    "    #Calculate loss\n",
+    "    loss = loss_fn(y_preds, y_train) #(input data, output data)\n",
+    "\n",
+    "    #Optimzer zero grad\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    #Perform backpropagation on the loss with respect to parameters of the model\n",
+    "    loss.backward()\n",
+    "\n",
+    "    #Perform gradient descent\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    model_0.eval() #turns off gradient tracking"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 6:35:46"
+   ]
   }
  ],
  "metadata": {
